STARCH-678 final review, unit test cleanup